<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="app_name">АллатРа</string>
    <string name="navigation_drawer_open">Открыть навигацию</string>
    <string name="navigation_drawer_close">Закрыть навигацию</string>
    <string name="close">Закрыть</string>
    <string name="drawer_name">АллатРа</string>
    <string name="practices">Практики</string>
    <string name="allat">Аллат</string>
    <string name="quotes">Цитаты</string>
    <string name="r_quote">Случайная Цитата</string>
    <string name="books">Книги</string>
    <string name="active_signs">Активные знаки</string>
    <string name="settings">Настройки</string>
    <string name="notifs">Уведомления</string>
    <string name="devs">Разработчики</string>
    <string name="web">Сайты</string>
    <string name="about_us">О нас</string>
    <string name="meditations_title">Медитации</string>
    <string name="spiritual_title">Духовные практики</string>
    <string name="share_link">Поделится сылкой на загрузку %s</string>
    <string name="share_quote">Поделится цитатой</string>
    <string name="time_to_group_meditation">Время до начала Аллата:</string>
    <string name="allat_started_meditation">Аллат. До конца осталось:</string>
    <string name="hide">Закрыть</string>
    <string name="share">Поделится</string>
    <string name="copy">Копировать</string>
    <string name="share_practice">Поделится Практикой</string>
    <string name="radio">Радио</string>
    <string name="radio_allatra">AllatRa</string>
    <string name="radio_allatra_radio">Radio</string>
    <string name="allatra_tv_im">И.М.Данилов</string>
    <string name="allatra_tv">АллатРа ТВ</string>
    <string name="znai">Поиск</string>
    <string name="allatra_org">АллатРа.Org</string>
    <string name="allatra_unites">#AllatraUnites</string>
    <string name="vesti">АллатРа Вести</string>
    <string name="science">АллатРа Наука</string>
    <string name="partner">Партнерское соглашение</string>
    <string name="craudfaunding">Краудфандинг</string>
    <string name="geo_center">АллатРа ГеоЦентр</string>
    <string name="load">Загрузить</string>
    <string name="select_language_load">Выберите язык книги:</string>
    <string name="select_language_share">Выберите язык книги чтобы поделиться:</string>
    <string name="filter_by_language">Фильтр по языку:</string>
    <string name="all">Все</string>
    <string name="link_to_load">Ссылка на загрузку %s\n%s</string>
    <string name="click_to_unlock">Разблокировать</string>
    <string name="click_to_lock">Заблокировать</string>
    <string name="downloads">Загрузки</string>
    <string name="download">Загрузка</string>
    <string name="downloading">Загрузка…</string>
    <string name="delete_confirmation">Вы уверены, удалить %s?</string>
    <string name="confirm">Подтвердить</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="cant_delete_book">Не могу удалить %s</string>
    <string name="cant_delete_book_error">Не могу удалить %s, %s</string>
    <string name="storage_not_available_writing">Хранилище недоступно для записи</string>
    <string name="cant_create_folder_for_downloads">Не получается создать папку для загрузок: %s</string>
    <string name="internet_not_available">Нет Интернета</string>
    <string name="cant_access_storage">Нет доступа к хранилищу</string>
    <string name="not_enough_memory">Недостаточно памяти</string>
    <string name="save_web_loading">Скачать файл %s?\nВы сможете найти его в секции приложения "Загрузки"</string>
    <string name="timezone_config_description">От выбранной временной зоны будут зависить время Аллата, нотификации связанные с Аллатом и случайные нотификации, вы можете изменить эту настройку в любое время на экране Аллата в зоне конфигураций</string>
    <string name="timezone_config_local">Локальная временная зона - это временная зона вашего устройства, она настроенна вручную или автоматически в зависимости от геолокации.</string>
    <string name="timezone_config_kiev">Киевская временная зона - это временная зона по Киеву. Есть летнее время и оно автоматически поддерживается/обновляется.</string>
    <string name="timezone_config_gmt">Гринвич - это временная зона по Гринвичу. Нет летнего времени.</string>
    <string name="timezones_info">Информация о часовых поясах:</string>
    <string name="timezone_config_btn_local">Локальная</string>
    <string name="timezone_config_btn_kiev">Киев</string>
    <string name="timezone_config_btn_gmt">Гринвич</string>
    <string name="select_allat_timezone">Выберите часовой пояс Аллата:</string>
    <string name="change_timezone">Изменить часовой пояс:</string>
    <string name="none">Нет</string>
    <string name="ring_on_end">Сигнал о конце:</string>
    <string name="ring_on_start">Сигнал о начале:</string>
    <string name="notify_before_min">Напомнить за мин.:</string>
    <string name="allat_reminder">Напоминание Аллата</string>
    <string name="allat_has_started">Аллат начался!</string>
    <string name="allat_has_ended">Аллат завершился!</string>
    <string name="random_quote">Случайная Цитата</string>
    <string name="select_page">Перейти на страницу:</string>
    <string name="select_page_hint">От 1 до %d</string>
    <string name="no_items_to_show">Список пуст</string>
    <string name="favorite">Избранные</string>
    <string name="in_favorite">В Избранные</string>
    <string name="remove_from_fav">Убрать из Избранных</string>
    <string name="add_to_fav">Добавить в Избранные</string>
    <string name="random_quotes">Случайные Цитаты</string>
    <string name="random_quotes_description">Эта настройка позволит получать случайные цитаты из книг в случайное время.
        Настроить можно лишь количество таких цитат в день от 0 до 2. \n\n - Где 2 значит, что в одни сутки может не быть ни
        одной цитаты, может быть одна или две. \n\n - 1 значит ни одной или одна в сутки. \n\n - 0 отключает эти уведомления.
        \n\nУведомления могут появлятся с 8 часов утра локального времени устройства до 10 часов вечера, за исключением
        выбранного времени Аллата с отступом 30 минут до и 50 после. То-есть, если ваше время Аллата локальное 9 и 21,
        то в промежутках 8:30 - 9:50 и 20:30 - 21:50 нотификаций не будет.
    </string>
    <string name="num_of_quotes_per_day">Колличество цитат</string>
    <string name="play">Играть</string>
    <string name="pause">Пауза</string>
    <string name="stop">Стоп</string>
    <string name="online">Онлайн</string>
    <string name="offline">Офлайн</string>
    <string name="on_air">В Эфире</string>
    <string name="on_air_paused">В Эфире (Пауза)</string>
    <string name="radio_error">Ошибка Сервера</string>
    <string name="buffering">Загрузка…</string>
    <string name="no_internet">Нет Интернета, проверьте соединение и попробуйте снова</string>
    <string name="mediadata_artist">АллатРа</string>
    <string name="mediadata_album">Радио</string>
    <string name="mediadata_title_on_air">В Эфире</string>
    <string name="mediadata_title_no_connection">Нет Интернета. Ожидание</string>
    <string name="mediadata_title_on_air_paused">В Эфире (Пауза)</string>
    <string name="refresh">Обновить</string>
    <string name="web_view_general_error">Внутренняя ошибка сайта или проблемы с соединением. Для определенных регионов некоторые ресурсы доступны только под VPN</string>
    <string name="web_view_net_error_desc">Описание ошибки: %s</string>
    <string name="web_view_no_internet">Нет Интернета\n\nПроверьте соединение и попробуйте снова</string>
    <string name="open_practices">Открыть</string>
    <string name="no_permissions">У приложения не хватает разрешений</string>
    <string name="settings_icon">Settings icon</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="no_saved_files">Нет сохраненных файлов</string>
    <string name="deleted">Удалено</string>
    <string name="no_downloads_description">Скачать видео/аудио можно из разделов меню "И.М.Данилов" и "АллатРа ТВ", под видео обычно есть кнопки "Скачать" для разных форматов видео/аудио версии передачи.\n\nПосле завершения загрузки, вы сможете увидеть эти файлы тут для открытия или удаления.\n\nСостояние загрузки можно увидеть в нотификациях потянув строку статус бара.</string>
    <string name="unknown_format">Невозможно открыть файл. Неизвестный формат</string>
    <string name="sound_level_maximum">Максимальная громкость:</string>
    <string name="to_verdict">Обратный отсчёт (GMT +0):</string>
    <string name="verdict_in_exec">В исполнении (GMT +0):</string>
    <string name="no_permissions_to_get_files">Нет разрешения для доступа к файлам</string>
    <string name="chetverik_short_title">Четверик</string>
    <plurals name="mins_to_allat">
        <item quantity="one">%d минута до Аллата</item>
        <item quantity="two">%d минуты до Аллата</item>
        <item quantity="few">%d минуты до Аллата</item>
        <item quantity="many">%d минут до Аллата</item>
        <item quantity="other">%d минут до Аллата</item>
    </plurals>
    <plurals name="days_to">
        <item quantity="one">%d День</item>
        <item quantity="two">%d Дня</item>
        <item quantity="few">%d Дня</item>
        <item quantity="many">%d Дней</item>
        <item quantity="other">%d Дней</item>
    </plurals>
    <plurals name="hours_to">
        <item quantity="one">%d Час</item>
        <item quantity="two">%d Часа</item>
        <item quantity="few">%d Часа</item>
        <item quantity="many">%d Часов</item>
        <item quantity="other">%d Часа</item>
    </plurals>
    <plurals name="minutes_to">
        <item quantity="one">%d Минута</item>
        <item quantity="two">%d Минуты</item>
        <item quantity="few">%d Минуты</item>
        <item quantity="many">%d Минут</item>
        <item quantity="other">%d Минут</item>
    </plurals>
    <string name="minutes">Минуты</string>
    <string name="seconds">Секунды</string>
    <string name="timer">Таймер</string>
    <string name="practice_timer">Таймер Практики</string>
    <string name="practice_stage_start">Подготовка</string>
    <string name="save">Сохранить</string>
    <string name="observations">Наблюдения:</string>
    <string name="when">Когда:</string>
    <string name="edit_calendar">Выбрать</string>
    <string name="end">Конец:</string>
    <string name="start">Начало:</string>
    <string name="practice">Практика:</string>
    <string name="open">Открыть</string>
    <string name="power_mng_desc">Если у вас есть проблемы с таймерами Аллата, практик или радио, скорее всего ваше устройство имеет персональный менеджер оптимизации питания, подобные менеджеры в обход системных правил могут нарушать работу приложений в фоне, не пробуждать по таймерам и т.д. у них в исключениях собственные системные приложения будильников и им подобные, а так же очень популярные меседжеры и соц. сети. Для корректной работы приложения АллатРа, его нужно добавить в список исключений данных менеджеров оптимизаций питания.\nНиже приведены несколько вариантов по которым можно найти данные настройки. Для каждого устройства производитель делает свои приложения оптимизации энергопотребления, поэтому есть вероятность что список программно добавленных тут приложений не полный и нажимая на кнопки ниже не будет никаких действий. Тогда стоит открыть настройки вручную и найти настройки питания/энергопотребления/батареи или приложений и добавить там в исклчения экономии энергии приложение АллатРа.</string>
    <string name="power_management">Power Management</string>
    <string name="autostart_management">AutoStart Management</string>
</resources>