<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


    <TextView
            android:id="@+id/when"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/when"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/when_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_calendar"
            android:drawableEnd="@drawable/ic_calendar"
            android:drawablePadding="4dp"
            android:paddingStart="8dp"
            app:layout_constraintStart_toEndOf="@id/when"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/when"/>

    <TextView
            android:id="@+id/observeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/observations"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/when"
            android:layout_marginTop="24dp"/>

    <com.allat.mboychenko.silverthread.presentation.views.custom.LinedEditText
            android:id="@+id/note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="6"
            android:lines="8"
            android:scrollbars="vertical"
            android:background="@null"
            android:gravity="top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/observeTitle"
            android:layout_marginTop="4dp"/>

    <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/note"
            app:layout_constraintEnd_toStartOf="@id/save" />

    <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/note"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>