<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/downloadsList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="gone"/>

    <TextView
            android:id="@+id/noFiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/noFilesDescription"
            app:layout_constraintVertical_chainStyle="packed"
            android:gravity="center"
            android:textSize="18sp"
            android:visibility="gone"
            android:text="@string/no_saved_files"
            tools:visibility="visible"/>

    <TextView
            android:id="@+id/noPermissions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textSize="18sp"
            android:visibility="gone"
            android:text="@string/no_permissions_to_get_files"
            tools:visibility="gone"/>

    <TextView
            android:id="@+id/noFilesDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noFiles"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/no_downloads_description"/>

    <androidx.constraintlayout.widget.Group
            android:id="@+id/noItemsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="noFiles,noFilesDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>